tests/sksl/errors/InterfaceBlockStorageModifiers.glsl
### Compilation failed:

error: 1: 'out' is not permitted here
1 error
